fix: split payment reconcile transaction boundary and stabilize regression tests